--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "novel": "^1.0.2",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "stripe": "^20.1.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
   },
